Fix heading alignment and nav

--- a/static/abridge.css
+++ b/static/abridge.css
@@ -1284,7 +1284,11 @@ h1 a:hover, h2 a:hover {
 }
 
 /* Default left-alignment for headings */
-h2, h3, h4, h5, h6 {
+article h2,
+article h3,
+article h4,
+article h5,
+article h6 {
   text-align: left;
 }
 
@@ -1350,8 +1354,8 @@ pre {
 }
 
 /* ---- HEADER ALIGNMENT HOT-FIX -------------------------------- */
-header > nav,
-header > nav > div:nth-child(2) {
+header nav,
+.nav-wrapper {
   justify-content: center !important; /* override theme’s space-between */
   padding-left: 0 !important;
   padding-right: 0 !important;
@@ -1422,6 +1426,9 @@ header > nav > div:nth-child(2) {
 .arrow {
   font-size: 0.75em;
   transition: transform 0.2s ease;
+}
+.dropdown[open] .arrow {
+  transform: rotate(180deg);
 }
 
 .home-icon svg {
